# rag-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  RAG-Forge_PRD_v1.1_with_Section17_tracked.docx  README.md  SECURITY.md  commitlint.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rag-forge.config.ts  ruff.toml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  og-image.html
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  rag-audit.yml
apps/docs/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/docs/app/: globals.css  layout.tsx
apps/docs/content/: _meta.ts  contributing.mdx  index.mdx  upgrading-v0-2-x.mdx
apps/site/: README.md  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts
apps/site/app/: globals.css  layout.tsx  page.tsx
apps/site/components/: comparison-table.tsx  copy-button.tsx  feature-grid.tsx  footer.tsx  hero.tsx  navbar.tsx  problem-section.tsx  quick-start.tsx  rmm-ladder.tsx  templates.tsx  theme-toggle.tsx  trust-badges.tsx
apps/site/lib/: content.ts
docs/: README.md  architecture.md  evaluators.md
docs/release-notes/: v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.2.0.md  v0.2.1.md  v0.2.2-verification-report.md
docs/superpowers/plans/: 2026-04-11-phase1a-data-pipeline.md  2026-04-11-phase1b-evaluation-pipeline.md  2026-04-11-phase1c-cli-commands.md  2026-04-11-phase2a-hybrid-retrieval.md  2026-04-12-docs-site.md  2026-04-12-landing-page.md  2026-04-12-package-publishing.md  2026-04-12-phase2b-security-module.md  2026-04-12-phase2c-evaluation-enhancements.md  2026-04-12-phase2d-mcp-templates.md  2026-04-12-phase3a-observability.md  2026-04-12-phase3b-semantic-caching.md  2026-04-12-phase3c-pdf-mcp-tools.md  2026-04-12-phase3d-n8n-agentic.md  2026-04-12-pra-rmm-assessment-commands.md  2026-04-12-prb-observability-diagnostics.md  2026-04-12-prc-authoring-preview.md  2026-04-13-rag-forge-v011-fixes.md  2026-04-14-github-repo-polish.md  2026-04-14-v0.2.0-evaluator-refresh.md  2026-04-16-v023-evaluator-bugfixes.md
docs/superpowers/specs/: 2026-04-11-phase1a-data-pipeline-design.md  2026-04-11-phase1b-evaluation-pipeline-design.md  2026-04-11-phase1c-cli-commands-design.md  2026-04-11-phase2a-hybrid-retrieval-design.md  2026-04-12-docs-site-design.md  2026-04-12-landing-page-design.md  2026-04-12-missing-cli-commands-design.md  2026-04-12-package-publishing-design.md  2026-04-12-phase2b-security-module-design.md  2026-04-12-phase2c-evaluation-enhancements-design.md  2026-04-12-phase2d-mcp-templates-design.md  2026-04-12-phase3a-observability-design.md  2026-04-12-phase3b-semantic-caching-design.md  (+5 more)
eval/: golden_set.json
scripts/: check-publish-names.sh
templates/agentic/: README.md
templates/agentic/project/: README.md  pyproject.toml
templates/agentic/project/eval/: config.yaml  golden_set.json
templates/agentic/project/src/: config.py  pipeline.py
templates/basic/project/: README.md  pyproject.toml
templates/basic/project/eval/: config.yaml  golden_set.json
templates/basic/project/src/: config.py  pipeline.py
templates/enterprise/: README.md
templates/enterprise/project/: README.md  pyproject.toml
templates/enterprise/project/.github/workflows/: rag-audit.yml
templates/enterprise/project/eval/: config.yaml
templates/enterprise/project/src/: config.py  pipeline.py
templates/hybrid/: README.md
templates/hybrid/project/: README.md  pyproject.toml
templates/hybrid/project/eval/: config.yaml  golden_set.json
templates/hybrid/project/src/: config.py  pipeline.py
templates/n8n/: README.md
(+44 files in other folders)
