[project]
name = "rag-forge-workspace"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.uv.workspace]
members = ["packages/core", "packages/evaluator", "packages/observability"]

[tool.uv.sources]
rag-forge-core = { workspace = true }
rag-forge-evaluator = { workspace = true }
rag-forge-observability = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
    "packages/core/tests",
    "packages/evaluator/tests",
    "packages/observability/tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# Optional integrations installed as extras — stubs not available
[[tool.mypy.overrides]]
module = ["anthropic.*", "cohere.*", "sentence_transformers.*", "bm25s.*", "jinja2.*", "presidio_analyzer.*", "ragas.*", "deepeval.*", "datasets.*", "redis.*", "playwright.*"]
ignore_missing_imports = true
