[project]
name = "my-rag-pipeline"
version = "0.1.0"
description = "An agentic RAG pipeline with multi-query decomposition"
requires-python = ">=3.11"
dependencies = [
    "rag-forge-core",
    "rag-forge-evaluator",
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
]

[tool.rag-forge]
template = "agentic"
chunk_strategy = "recursive"
chunk_size = 512
overlap_ratio = 0.1
vector_db = "qdrant"
embedding_model = "BAAI/bge-m3"
retrieval_strategy = "hybrid"
retrieval_alpha = 0.6
agent_mode = true
