[project]
name = "my-rag-pipeline"
version = "0.1.0"
description = "A basic RAG pipeline scaffolded by RAG-Forge"
requires-python = ">=3.11"
dependencies = [
    "rag-forge-core",
    "rag-forge-evaluator",
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
]

[tool.rag-forge]
template = "basic"
chunk_strategy = "recursive"
chunk_size = 512
overlap_ratio = 0.1
vector_db = "qdrant"
embedding_model = "BAAI/bge-m3"
